Integrate histogram support in `ObservationImpl`, enhance `AgentBase` functionality, and implement coverage tests:
- Added histogram storage and retrieval in `Observation`.
- Implemented serialization/deserialization utilities for histograms in `Utils`.
- Enhanced `AgentBase` with supplier-based task execution and related test cases.
- Refined `ScalarComputationGroovy` to handle non-scalar and predefined variables effectively.
- Added `CoverageImplTest` to verify temporal coverage calculations.
- Introduced unit tests for Groovy expression handling and supply completion in agent scopes.
- Extended error handling in `Language` for unsupported expression languages.
- Updated unused aggregate property exceptions in `ObservationOps`.